[package]
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "types for the jsonrpc specification, ultra lightweight"
documentation = "https://docs.rs/jrpc"
keywords = ["jsonrpc", "spec"]
license = "MIT OR Apache-2.0"
name = "jrpc"
readme = "README.md"
repository = "https://github.com/vitiral/jrpc"
version = "0.4.0"

[dependencies]
serde = "1.0.40"
serde_derive = "1.0.40"
std_prelude = "0.2.12"
serde_json = "1.0.15"
